@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<node name="/com/redhat/DBus.imsettings.GConf">
-  <interface name="com.redhat.DBus.imsettings.GConf">
+<node name="/com/redhat/imsettings/GConf">
+  <interface name="com.redhat.imsettings.GConf">
     <method name="ChangeTo">
       <arg type="s" name="module" direction="in" />
       <arg type="b" name="ret" direction="out" />
